# email_newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: database-setup  general.yml
.github/workflows/rust-setup/: action.yml
configuration/: base.yaml
migrations/: 20230209225543_create_subscriptions_table.sql  20230312215604_make_status_not_null_in_subscriptions.sql  20230312221433_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
