[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Vitor Aquino"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.0", default-features = false, features = ["macros"] }
reqwest = { version = "0.11.14", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
claim = "0.5.0"
validator = "0.16.0"
fake = "2.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
